[package]
name = "tradepulse-accel"
version = "0.1.0"
edition = "2021"
description = "Rust accelerators for TradePulse numeric primitives"
authors = ["TradePulse Contributors"]
license = "LicenseRef-TradePulse-Proprietary"
license-file = "../../LICENSE"
readme = "README.md"

[features]
default = []
python-tests = []

[lib]
name = "tradepulse_accel"
crate-type = ["cdylib", "rlib"]

[dependencies]
# pyo3 0.22 carries GHSA-pph8-gcv7-4qj5 (buffer overflow in
# `PyString::from_object`); the advisory is patched in 0.24.1+. We
# align numpy + pyo3 + pyo3-build-config on the same 0.28 line since
# PyO3 versions itself across the trio in lockstep.
numpy = "0.28"
pyo3 = { version = "0.28", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[build-dependencies]
pyo3-build-config = "0.28"

[[bench]]
name = "numeric"
harness = false

[package.metadata.maturin]
name = "tradepulse_accel"
